--- a/index.html
+++ b/index.html
@@ -4,48 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-      rel="stylesheet"
-    />
     <title>Document</title>
   </head>
   <body>
-    <section id="container">
-      <main id="main-container">
-        <div>
-          <!-- the images -->
-          <div id="main-content">
-            <section id="images-result"></section>
-          </div>
-        </div>
-      </main>
-
-      <!-- sidebar for history managment & search & favorite images -->
-      <aside id="aside-container">
-        <div>
-          <header>The imager</header>
-        </div>
-        <!-- search -->
-        <div id="#search-desktop">
-          <input id="search-input" type="text" placeholder="serch" />
-          <button id="search-button">serach</button>
-        </div>
-
-        <!-- favorite images -->
-        <div>
-          <p>Favorites</p>
-          <ul></ul>
-        </div>
-
-        <!-- history managment -->
-        <div>
-          <p>Search History</p>
-        </div>
-      </aside>
+    <!-- header -->
+     <header>
+      <h1>The Image Odyssey ⚓️</h1>
+     </header>
+    <!-- search bar -->
+    <section id="search-container" class="container">
+      <input id="search-input" type="text" placeholder="what would you like to see?" />
+      <button id="search-button">Lets Go!</button>
     </section>
+
+    <!-- image viewer -->
+    <section id="image-container" class="container">
+      <div id="image-list"></div>
+      <button id="show-more-button">Show More</button>
+    </section>
+
     <script src="./scripts/script.js" type="module"></script>
   </body>
 </html>
