--- a/index.html
+++ b/index.html
@@ -7,22 +7,28 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- header -->
-     <header>
-      <h1>The Image Odyssey ⚓️</h1>
-     </header>
-    <!-- search bar -->
-    <section id="search-container" class="container">
-      <input id="search-input" type="text" placeholder="what would you like to see?" />
-      <button id="search-button">Lets Go!</button>
-    </section>
+    <div id="page-container">
+      <!-- header -->
+      <header>
+        <h1>The Image Odyssey ⚓️</h1>
+      </header>
+      <!-- search bar -->
+      <section id="search-container" class="container">
+        <input
+          id="search-input"
+          type="text"
+          placeholder="what would you like to see?"
+        />
+        <button id="search-button">Lets Go!</button>
+      </section>
 
-    <!-- image viewer -->
-    <section id="image-container" class="container">
-      <div id="image-list"></div>
-      <button id="show-more-button">Show More</button>
-    </section>
+      <!-- image viewer -->
+      <section id="image-container" class="container">
+        <div id="image-list"></div>
+        <button id="show-more-button">Show More</button>
+      </section>
 
-    <script src="./scripts/script.js" type="module"></script>
+      <script src="./scripts/script.js" type="module"></script>
+    </div>
   </body>
 </html>
